--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('git checkout') {
             steps {
-             git 'https://github.com/Sushmaa123/Java-Springboot.git'
+             git 'https://github.com/Dimple-sasi-12/ci-cd-repo.git'
             }
         }
          stage('compile') {
@@ -38,22 +38,14 @@ pipeline {
          stage('docker build') {
             steps {
              script {
-                 sh 'docker build -t java-spring .'
-           }
+                 sh 'docker build -t img .'
             }
+          }
         }
-         stage('docker push') {
-            steps {
-             script {
-               sh 'docker tag java-spring sushmagowda321/java-spring'
-                    sh 'docker push sushmagowda321/java-spring'
-              }
-            }
-         }    
         stage('docker container') {
             steps {
              script {
-               sh 'docker run -itd --name ci-cd-container -p 8085:8081 java-spring'
+               sh 'docker run -itd --name ci-cd-container -p 8085:8081 img'
              }
             }
         }    
