--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,15 @@ pipeline {
             }
           }
         }
-        stage('docker container') {
+          stage('docker push') {
+            steps {
+             script {
+                    sh 'docker tag java-spring sushmagowda321/java-spring'
+                    sh 'docker push sushmagowda321/java-spring'
+                  }
+                }
+              }
+         stage('docker container') {
             steps {
              script {
                sh 'docker run -itd -p 8092:8000 img'
