--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,8 +45,8 @@ pipeline {
           stage('docker push') {
             steps {
              script {
-                    sh 'docker tag java-spring sushmagowda321/java-spring'
-                    sh 'docker push sushmagowda321/java-spring'
+                    sh 'docker tag img bunny2003/java-spring'
+                    sh 'docker push bunny2003/java-spring'
                   }
                 }
               }
