--- a/jenkinsfile
+++ b/jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
     post {
         always {
             echo 'slack Notification.'
-            slackSend channel: '#dev-team',
+            slackSend channel: '#team',
             color: COLOR_MAP [currentBuild.currentResult],
             message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URl}"
             
