--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
     agent any
     tools {
-    maven 'maven'
-  }
+        maven 'maven'
+    }
      environment {
         SCANNER_HOME = tool 'sonarqube'
-    }
+     }
     stages {
         stage('git checkout') {
             steps {
@@ -17,7 +17,7 @@ pipeline {
               sh 'mvn compile'
             }
         }
-         stage('code analysis') {
+          stage('code analysis') {
             steps {
               withSonarQubeEnv('sonar-server') {
                sh ''' $SCANNER_HOME/bin/sonar-scanner -Dsonar.projectName=Java-Springboot \
@@ -34,25 +34,25 @@ pipeline {
          stage('docker build') {
             steps {
              script {
-                 sh 'docker build -t img .'
+                 sh 'docker build -t java-img .'
             }
           }
-        }
-          stage('docker push') {
-            steps {
-             script {
-                   withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
-                    sh 'docker tag img bunny2003/java-spring'
-                    sh 'docker push bunny2003/java-spring'
-                    }
-                  }
-                }
-              }
+          }
          stage('docker container') {
             steps {
              script {
-               sh 'docker run -itd -p 8092:8000 img'
+               sh 'docker run -itd -p 8082:8000 java-img'
              }
             }
-        }    
-    }	
+        }
+    }
+    post {
+        always {
+            echo 'slack Notification.'
+            slackSend channel: '#dev',
+            color: COLOR_MAP [currentBuild.currentResult],
+            message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URl}"
+
+        }
+    }
+}
